-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10
-
None
-
3
-
7f5b60275 (dev), 461b0df0b (6.10), da7f7e19f (6.10.0), 8f1bfc045 (dev), c594a59ff (6.10)
-
Foundation Sprint 139
This is a problem with the snippet we have for the TreeModel in our documentation: https://doc-snapshots.qt.io/qt6-dev/qml-qt-labs-qmlmodels-treemodel.html
You can press F2 to edit a field and a text editor will open. You can enter some stuff and then press enter to commit the change.
However, the change is not written to the model and the following error message appears on the command line:
qrc:/qt-project.org/imports/QtQuick/Controls/Fusion/TreeViewDelegate.qml:85:13: Unable to assign [undefined] to QString
The same happens if I replace the TreeModel with a TableModel.
It might be a problem in the models but also in the delegate.
Maybe it is just not meant to work, in which case we should change the snippet in the documentation. In fact, the TableModel documentation shows the usage of custom delegates that work well with both TableModel and TreeModel.
For Gerrit Dashboard: QTBUG-140026 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
675141,5 | Make defaultDelegate compatible with TreeModel and TableModel | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
680133,2 | Make defaultDelegate compatible with TreeModel and TableModel | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
680429,2 | Make defaultDelegate compatible with TreeModel and TableModel | 6.10.0 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
680836,3 | Add some test cases to test the setData methods in QQmlTreeModel | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
681923,2 | Add some test cases to test the setData methods in QQmlTreeModel | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |