Make defaultDelegate compatible with TreeModel and TableModel

TreeViewDelegate is calling the overloads where the role has
already been converted to an integer. As a result, the internal
string->int conversions fail, triggering early returns from these
methods.

Reorder some parameters and make the methods Q_INVOKABLE to change the
overload resolutions and make the default delegate usable with both
TreeModel and TableModel.

[ChangeLog][Qt labs QML Models] Changed the order of the role and
value parameters in setData to resolve ambiguity.

Fixes: QTBUG-140026
Change-Id: I0546eddf88ad005a13d156d3b3466c44d10c333d
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 7f5b602751d600ee3ed55a613246e6c35bdd2dfc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 461b0df0b413174106c728c54ee9491b1f1aee08)