src/labs/models/qqmltreemodel.cpp
@@ -514,7 +514,7 @@ int QQmlTreeModel::columnCount(const QModelIndex &parent) const
 */
 
 /*!
-    \qmlmethod bool TreeModel::setData(QModelIndex index, string role, variant value)
+    \qmlmethod bool TreeModel::setData(QModelIndex index, variant value, string role)
 
     Inserts or updates the data field named by \a role in the TreeRow at the
     given \a index with \a value. Returns true if sucessful, false if not.
